--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                         modi nisi dolore error a beatae obcaecati. Officia ut a iste.</p>
             
                         
-
+                        <button onclick="myFunction()" type="button" class="btn btn-dark mb-3 w-25 p-2">SignUp</button>
+                        <p id="demo"></p>
 
     </div>
 
